--- a/docs/development/frontend/index.mdx
+++ b/docs/development/frontend/index.mdx
@@ -6,7 +6,7 @@ sidebar: Getting Started
 
 # DeployStack Frontend Development
 
-The DeployStack frontend is a modern web application built with Vue 3, TypeScript, and Vite, specifically designed for managing MCP (Model Context Protocol) server deployments. This guide covers everything you need to know to develop and contribute to the frontend.
+The DeployStack frontend is a modern web application built with Vue 3, TypeScript, and Vite, specifically designed for managing MCP (Model Context Protocol) server configurations. This guide covers everything you need to know to develop and contribute to the frontend.
 
 ## Technology Stack
 
