--- a/docs/onboard-new-team-members.mdx
+++ b/docs/onboard-new-team-members.mdx
@@ -17,7 +17,6 @@ This guide walks you through adding new developers to your existing DeployStack 
 
 Before inviting team members, make sure:
 
-- Your team has available member slots
 - You have Team Administrator or Team Owner privileges
 - Your team MCP servers are properly configured and tested
 - You're not trying to add members to your default team (personal teams don't support additional members)
@@ -189,7 +188,7 @@ deploystack status --verbose
 - **Team MCP Servers**: Access to all configured team servers
 - **Shared Credentials**: Automatic credential injection (no manual setup required)
 - **Team Environment Variables**: Access to team-wide environment settings
-- **Deployment History**: View team's MCP server deployment logs
+- **Process History**: View team's MCP server process logs
 
 ## Step 6: Team Orientation
 
