--- a/docs/quick-start.mdx
+++ b/docs/quick-start.mdx
@@ -1,6 +1,6 @@
 ---
 title: Quick Start
-description: Get DeployStack running in minutes with Docker Compose or individual Docker containers.
+description: Get started with DeployStack in minutes - create your free account, set up MCP servers, and install the gateway locally.
 sidebar: Quick Start
 icon: Zap
 ---
@@ -11,315 +11,349 @@ import { Steps, Step } from 'fumadocs-ui/components/steps';
 
 # Quick Start
 
-Get DeployStack up and running in minutes. Choose between our recommended Docker Compose setup or individual Docker containers for maximum flexibility.
+Get started with DeployStack in minutes. This guide walks you through creating a free account, configuring your first MCP server, and connecting your development environment.
+
+## What You'll Accomplish
+
+By the end of this guide, you'll have:
+- A free DeployStack account with team management
+- Your first MCP server configured with secure credentials
+- The DeployStack Gateway running locally
+- VS Code connected to your team's MCP tools
 
 ## Prerequisites
 
-- **Docker**: [Install Docker](https://docs.docker.com/get-docker/)
-- **Docker Compose**: [Install Docker Compose](https://docs.docker.com/compose/install/)
-- **System Requirements**: 4GB RAM, 20GB disk space
+- **Node.js**: [Install Node.js](https://nodejs.org/) (v18 or higher)
+- **VS Code or Cursor**: For MCP tool integration
+- **A few minutes**: This entire setup takes less than 5 minutes
 
-## Method 1: Docker Compose (Recommended)
-
-The fastest way to get DeployStack running with proper networking and persistence.
+## Step 1: Create Your Free Account
 
 <Steps>
   <Step>
-    **Download and Start**
+    **Sign Up for DeployStack**
     
-    Run these two commands to get DeployStack running:
+    Visit [cloud.deploystack.io](https://cloud.deploystack.io) and create your free account:
     
-    ```bash
-    curl -o docker-compose.yml https://raw.githubusercontent.com/deploystackio/deploystack/main/docker-compose.yml
-    DEPLOYSTACK_ENCRYPTION_SECRET=$(openssl rand -hex 16) docker-compose up -d
-    ```
+    - Sign up with your email address or GitHub account
+    - Complete email verification if required
+    - You'll automatically get your own default team
   </Step>
   
   <Step>
-    **Access DeployStack**
+    **Explore Your Dashboard**
     
-    Open your browser and navigate to:
-    - **DeployStack Interface**: [http://localhost:8080](http://localhost:8080)
-    - **Backend API**: [http://localhost:3000](http://localhost:3000)
-  </Step>
-  
-  <Step>
-    **Complete Setup**
-    
-    Follow the on-screen setup wizard to:
-    - Create your admin account
-    - Configure basic settings
-    - Set up your first MCP Server
+    Once logged in, you'll see:
+    - **Teams**: Your personal default team (automatically created)
+    - **MCP Catalog**: Browse available MCP servers
+    - **Team Settings**: Manage your team and credentials
   </Step>
 </Steps>
 
-### Managing Your Installation
+## Step 2: Configure Your First MCP Server
 
-```bash
-# View running services
-docker-compose ps
+Let's set up a popular MCP server to get you started quickly.
 
-# View logs
-docker-compose logs
-
-# Stop services
-docker-compose down
-
-# Start services
-docker-compose up -d
-
-# Update to latest version
-docker-compose pull && docker-compose up -d
-```
-
-## Method 2: Individual Docker Containers
-
-For more control over the deployment, run frontend and backend containers separately.
-
-### Step 1: Generate Encryption Secret
-
-<Tabs items={['Linux/macOS', 'Windows']}>
-  <Tab value="Linux/macOS">
-    ```bash
-    # Generate a secure secret
-    export DEPLOYSTACK_ENCRYPTION_SECRET=$(openssl rand -hex 16)
-    echo "Your encryption secret: $DEPLOYSTACK_ENCRYPTION_SECRET"
-    ```
-  </Tab>
+<Steps>
+  <Step>
+    **Browse the MCP Catalog**
+    
+    1. Navigate to the **MCP Catalog** in your dashboard
+    2. Browse available MCP servers (GitHub, BrightData, Weather, etc.)
+    3. Click on a server that interests you to see its details
+  </Step>
   
-  <Tab value="Windows">
-    ```powershell
-    # Generate a secure secret
-    $env:DEPLOYSTACK_ENCRYPTION_SECRET = -join ((1..32) | ForEach {'{0:X}' -f (Get-Random -Max 16)})
-    Write-Host "Your encryption secret: $env:DEPLOYSTACK_ENCRYPTION_SECRET"
-    ```
-  </Tab>
-</Tabs>
+  <Step>
+    **Add an MCP Server to Your Team**
+    
+    For this example, let's add the GitHub MCP server:
+    
+    1. Find "GitHub MCP Server" in the catalog
+    2. Click **"Add to Team"**
+    3. Select your default team
+    4. You'll be prompted to add credentials
+  </Step>
+  
+  <Step>
+    **Configure Credentials**
+    
+    Add your GitHub token securely:
+    
+    1. **Create a GitHub Token**: Go to [GitHub Settings > Personal Access Tokens](https://github.com/settings/tokens)
+    2. **Generate a new token** with appropriate permissions
+    3. **Add to DeployStack**: Paste the token in the credentials field
+    4. **Save**: Your credentials are encrypted and stored securely
+  </Step>
+</Steps>
 
-<Callout type="warn">
-  **Save this secret!** You'll need it for upgrades and configuration changes.
+<Callout type="info">
+  **Security Note**: Your credentials are encrypted and never exposed to your local environment. The DeployStack Gateway injects them securely at runtime.
 </Callout>
 
-### Step 2: Start Backend Service
+## Step 3: Install and Configure the Gateway
 
-```bash
-docker run -d \
-  --name deploystack-backend \
-  -p 3000:3000 \
-  -e DEPLOYSTACK_FRONTEND_URL="http://localhost:8080" \
-  -e DEPLOYSTACK_ENCRYPTION_SECRET="$DEPLOYSTACK_ENCRYPTION_SECRET" \
-  -v deploystack_backend_persistent:/app/persistent_data \
-  deploystack/backend:latest
-```
-
-### Step 3: Start Frontend Service
-
-```bash
-docker run -d \
-  --name deploystack-frontend \
-  -p 8080:80 \
-  -e VITE_DEPLOYSTACK_BACKEND_URL="http://localhost:3000" \
-  -e VITE_APP_TITLE="DeployStack" \
-  deploystack/frontend:latest
-```
-
-### Step 4: Verify Installation
-
-```bash
-# Check if containers are running
-docker ps
-
-# Check backend health
-curl http://localhost:3000/
-
-# Access the interface
-open http://localhost:8080  # macOS
-# or visit http://localhost:8080 in your browser
-```
-
-## Production Deployment
-
-For production deployments on a server or VPS:
-
-### Update Environment Variables
-
-Replace `localhost` with your server's IP address or domain:
-
-<Tabs items={['Docker Compose', 'Individual Containers']}>
-  <Tab value="Docker Compose">
-    Create a `.env` file:
-    
-    ```bash
-    # .env file
-    DEPLOYSTACK_ENCRYPTION_SECRET=your-generated-secret-here
-    DEPLOYSTACK_FRONTEND_URL=http://YOUR_SERVER_IP:8080
-    VITE_DEPLOYSTACK_BACKEND_URL=http://YOUR_SERVER_IP:3000
-    ```
-    
-    Then start with:
-    ```bash
-    docker-compose up -d
-    ```
-  </Tab>
-  
-  <Tab value="Individual Containers">
-    Update the Docker run commands:
-    
-    ```bash
-    # Backend
-    docker run -d \
-      --name deploystack-backend \
-      -p 3000:3000 \
-      -e DEPLOYSTACK_FRONTEND_URL="http://YOUR_SERVER_IP:8080" \
-      -e DEPLOYSTACK_ENCRYPTION_SECRET="your-secret-here" \
-      -v deploystack_backend_persistent:/app/persistent_data \
-      deploystack/backend:latest
-    
-    # Frontend
-    docker run -d \
-      --name deploystack-frontend \
-      -p 8080:80 \
-      -e VITE_DEPLOYSTACK_BACKEND_URL="http://YOUR_SERVER_IP:3000" \
-      -e VITE_APP_TITLE="DeployStack Production" \
-      deploystack/frontend:latest
-    ```
-  </Tab>
-</Tabs>
-
-### Firewall Configuration
-
-Ensure your firewall allows traffic on the required ports:
-
-```bash
-# Ubuntu/Debian
-sudo ufw allow 3000  # Backend API
-sudo ufw allow 8080  # Frontend
-
-# CentOS/RHEL
-sudo firewall-cmd --permanent --add-port=3000/tcp
-sudo firewall-cmd --permanent --add-port=8080/tcp
-sudo firewall-cmd --reload
-```
-
-## Environment Variables Reference
-
-### Required Variables
-
-| Variable | Description | Example |
-|----------|-------------|----------|
-| `DEPLOYSTACK_ENCRYPTION_SECRET` | 32-character secret for encrypting sensitive data | `a1b2c3d4e5f6789...` |
-
-### Optional Variables
-
-| Variable | Description | Default | Example |
-|----------|-------------|---------|----------|
-| `DEPLOYSTACK_FRONTEND_URL` | URL where frontend is accessible | `http://localhost:8080` | `https://deploystack.company.com` |
-| `VITE_DEPLOYSTACK_BACKEND_URL` | Backend API URL for frontend | `http://localhost:3000` | `https://api.deploystack.company.com` |
-| `VITE_APP_TITLE` | Custom application title | `DeployStack` | `Company DeployStack` |
-
-## Next Steps
-
-Once DeployStack is running:
+The DeployStack Gateway runs locally and connects your development tools to your team's MCP servers.
 
 <Steps>
   <Step>
-    **Complete Initial Setup**
+    **Install the Gateway**
     
-    - Create your admin account
-    - Configure global settings (email, authentication)
-    - Set up user roles and permissions
+    Install the DeployStack Gateway globally via npm:
+    
+    ```bash
+    npm install -g @deploystack/gateway
+    ```
+    
+    Verify the installation:
+    
+    ```bash
+    deploystack --version
+    ```
   </Step>
   
   <Step>
-    **Deploy Your First MCP Server**
+    **Login to DeployStack**
     
-    - Browse the MCP server catalog
-    - Configure credentials and settings
-    - Deploy to your preferred cloud provider
+    Authenticate with your DeployStack account:
+    
+    ```bash
+    deploystack login
+    ```
+    
+    This will:
+    - Open a browser window for authentication
+    - Download your team's MCP server configurations
+    - Set up secure credential access
   </Step>
   
   <Step>
-    **Explore Advanced Features**
+    **Start the Gateway**
     
-    - Set up team collaboration
-    - Create private MCP server catalogs
-    - Configure CI/CD integrations
+    Start the gateway to begin using your MCP servers:
+    
+    ```bash
+    deploystack start
+    ```
+    
+    The gateway will:
+    - Start all your configured MCP servers as background processes
+    - Expose them at `http://localhost:9095/sse`
+    - Inject credentials securely without exposing them to you
+  </Step>
+  
+  <Step>
+    **Verify Gateway Status**
+    
+    Check that everything is working:
+    
+    ```bash
+    deploystack status
+    ```
+    
+    You should see:
+    - Gateway status: Running
+    - Your team name
+    - List of available MCP servers
   </Step>
 </Steps>
 
-## Troubleshooting
+## Step 4: Connect Your Development Environment
 
-### Common Issues
+Now connect VS Code or Cursor to use your team's MCP servers.
 
-#### Port Conflicts
+<Steps>
+  <Step>
+    **Configure VS Code MCP Settings**
+    
+    Open your VS Code settings and configure MCP to use the DeployStack Gateway.
+    
+    **Location**: `.vscode/settings.json` or global VS Code settings
+    
+    **Before** (manual MCP server management):
+    ```json
+    {
+      "mcpServers": {
+        "github": {
+          "command": "npx",
+          "args": ["@github/mcp"],
+          "env": {
+            "GITHUB_TOKEN": "your-token-here"
+          }
+        }
+      }
+    }
+    ```
+    
+    **After** (DeployStack Gateway):
+    ```json
+    {
+      "mcpServers": {
+        "deploystack": {
+          "url": "http://localhost:9095/sse",
+          "name": "DeployStack Gateway",
+          "description": "Enterprise MCP Gateway with team-based access control"
+        }
+      }
+    }
+    ```
+  </Step>
+  
+  <Step>
+    **Test MCP Connection**
+    
+    1. **Restart VS Code** to load the new MCP configuration
+    2. **Open Claude or compatible MCP client**
+    3. **Test a tool**: Try using one of your configured MCP servers
+    4. **Verify**: Tools should work without any manual credential setup
+  </Step>
+</Steps>
 
-If ports 3000 or 8080 are already in use:
+## Step 5: Explore Your Setup
+
+Now that everything is connected, explore what you can do:
+
+<Steps>
+  <Step>
+    **List Available Tools**
+    
+    See all MCP tools available through your gateway:
+    
+    ```bash
+    deploystack mcp
+    ```
+    
+    This shows all tools from your team's MCP servers with their descriptions.
+  </Step>
+  
+  <Step>
+    **Monitor Gateway Activity**
+    
+    View real-time logs and activity:
+    
+    ```bash
+    deploystack logs
+    ```
+    
+    This shows MCP server activity, tool usage, and any issues.
+  </Step>
+  
+  <Step>
+    **Manage Your Team**
+    
+    Back in the [DeployStack dashboard](https://cloud.deploystack.io):
+    - Add more MCP servers to your team
+    - Invite team members (if you have a team)
+    - Monitor usage and activity
+    - Manage credentials securely
+  </Step>
+</Steps>
+
+## Common Gateway Commands
+
+Here are the essential commands you'll use regularly:
 
 ```bash
-# Check what's using the ports
-lsof -i :3000
-lsof -i :8080
+# Check gateway status
+deploystack status
 
-# Use different ports
-docker run -p 3001:3000 ...  # Backend on port 3001
-docker run -p 8081:80 ...    # Frontend on port 8081
+# Start the gateway
+deploystack start
+
+# Stop the gateway
+deploystack stop
+
+# Restart the gateway
+deploystack restart
+
+# View logs
+deploystack logs
+
+# List available MCP tools
+deploystack mcp
+
+# Update configurations from cloud
+deploystack sync
+
+# Switch teams (if you have multiple)
+deploystack teams
 ```
 
-#### Services Won't Start
+## Multiple Teams
+
+If you're part of multiple teams or create additional teams:
 
 ```bash
-# Check container logs
-docker logs deploystack-backend
-docker logs deploystack-frontend
+# List your teams
+deploystack teams
 
-# Check system resources
-docker stats
-df -h  # Check disk space
-free -h  # Check memory
+# Switch to a specific team
+deploystack teams --switch 2
+
+# Check current team context
+deploystack status
 ```
 
-#### Can't Access the Interface
-
-1. **Check if services are running**:
-   ```bash
-   docker ps
-   curl http://localhost:3000/
-   ```
-
-2. **Check firewall settings**:
-   ```bash
-   # Test local connectivity
-   telnet localhost 8080
-   telnet localhost 3000
-   ```
-
-3. **Check environment variables**:
-   ```bash
-   docker inspect deploystack-frontend | grep -A 10 Env
-   docker inspect deploystack-backend | grep -A 10 Env
-   ```
-
-### Getting Help
-
-If you need assistance:
-
-- **Community**: Join our [Discord](https://discord.gg/UjFWwByB)
-- **Issues**: Report problems on [GitHub](https://github.com/deploystackio/deploystack/issues)
-- **Support**: Contact us for enterprise support options
+When you switch teams, the gateway automatically:
+- Downloads new team configurations
+- Starts the new team's MCP servers
+- Stops the previous team's servers
+- Updates available tools
 
 ## What's Next?
 
-### Learn More
+### Add More MCP Servers
 
-- **[Self-Hosted Documentation](/self-hosted)**: Comprehensive deployment guides
-- **[Local Development](/local-setup)**: Set up development environment
-- **[Global Settings](/global-settings)**: Configure email, auth, and more
-- **[User Roles](/roles)**: Manage team permissions
+Expand your toolkit by adding more MCP servers:
+- **BrightData**: Web scraping and data collection
+- **Weather**: Weather information and forecasts
+- **Database**: Connect to your databases
+- **Custom Servers**: Add your own private MCP servers
 
-### Deploy MCP Servers
+### Team Collaboration
 
-- **[MCP Server Catalog](https://deploystack.io/mcp)**: Browse available servers
+If you're working with a team:
+- **[Invite Team Members](/onboard-new-team-members)**: Add developers to your team
+- **[Manage Roles](/roles)**: Set up proper access control
+- **[Team Management](/teams)**: Organize multiple projects
+
+## Troubleshooting
+
+### Gateway Won't Start
+
+```bash
+# Check if you're logged in
+deploystack status
+
+# Re-login if needed
+deploystack login
+
+# Check for port conflicts
+lsof -i :9095
+```
+
+### MCP Tools Not Working
+
+1. **Check gateway status**:
+   ```bash
+   deploystack status
+   ```
+
+2. **Verify VS Code configuration**:
+   - Ensure the MCP server URL is `http://localhost:9095/sse`
+   - Restart VS Code after configuration changes
+
+3. **Check credentials**:
+   - Verify credentials are properly configured in your dashboard
+   - Test credentials directly in the DeployStack interface
+
+### Need Help?
+
+- **Community**: Join our [Discord](https://discord.gg/42Ce3S7b3b)
+- **Documentation**: Browse our [full documentation](/)
+- **Support**: Contact support for technical issues
 
 ---
 
-**🎉 Congratulations!** You now have DeployStack running. Start deploying MCP servers and streamline your AI agent infrastructure!
+**🎉 Congratulations!** You now have DeployStack configured and running. Your development environment is connected to enterprise-grade MCP management with secure credential handling and team collaboration features.
+
+**Next Steps**: Explore the [MCP Catalog](https://cloud.deploystack.io) to add more tools to your team, or invite colleagues to collaborate on your projects.
