--- a/docs/teams.mdx
+++ b/docs/teams.mdx
@@ -36,7 +36,7 @@ This default team is immediately ready for use - you can start configuring MCP s
 
 ### Additional Teams
 
-You can create additional teams beyond your automatically created default team to organize different projects or environments.
+You can create additional teams beyond your automatically created default team to organize different projects or environments. The team creation limit can be adjusted by administrators in Global Settings (default: 3 teams maximum).
 
 ## What Teams Contain
 
@@ -177,6 +177,7 @@ Team administrators can add new members to their teams (except default teams):
 **Limitations**:
 - **Default teams**: Cannot add members to your personal default team
 - **Existing users only**: Can only add users who already have DeployStack accounts
+- **Member limits**: Non-default teams have a configurable member limit (adjustable in Global Settings, default: 3 members)
 
 ### Managing Member Roles
 
